--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.sylrsykssoft</groupId>
 	<artifactId>rest-java-musbands</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>rest-java-musbands</name>
@@ -106,7 +106,8 @@
 	
     <modules>
     	<module>rest-java-musbands-core</module>
+    	<module>rest-java-musbands-audit</module>
     	<module>rest-java-musbands-musical-genre</module>
-	</modules>
+    </modules>
 
 </project>
