--- a/rest-java-musbands-musical-genre/pom.xml
+++ b/rest-java-musbands-musical-genre/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 	  <groupId>org.sylrsykssoft</groupId>
 	  <artifactId>rest-java-musbands</artifactId>
-	  <version>0.0.1-SNAPSHOT</version>
+	  <version>0.0.2-SNAPSHOT</version>
 	</parent>
 	
 	<artifactId>rest-java-musbands-musical-genre</artifactId>
@@ -18,7 +18,12 @@
 		<dependency>
 			<groupId>org.sylrsykssoft</groupId>
 			<artifactId>rest-java-musbands-core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.0.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.sylrsykssoft</groupId>
+			<artifactId>rest-java-musbands-audit</artifactId>
+			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
