Defining Spring Security module

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
     <modules>
     	<module>rest-java-musbands-core</module>
     	<module>rest-java-musbands-audit</module>
+    	<module>rest-java-musbands-security</module>
     	<module>rest-java-musbands-musical-genre</module>
     </modules>
 
