--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
 		    <artifactId>commons-collections4</artifactId>
 		    <version>${commons-collections4.version}</version>
 		</dependency>
+		<dependency>
+  			<groupId>org.modelmapper.extensions</groupId>
+  			<artifactId>modelmapper-spring</artifactId>
+  			<version>2.3.0</version>
+		</dependency>
+
 		<!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
