--- a/restapi/configuration/src/main/resources/database.properties
+++ b/restapi/configuration/src/main/resources/database.properties
@@ -25,7 +25,7 @@ spring.jpa.properties.hibernate.format_sql = true
 spring.h2.console.enabled = true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.hibernate.ddl-auto = create
 # Naming strategy
 spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
