--- a/common/aspects/pom.xml
+++ b/common/aspects/pom.xml
@@ -19,6 +19,10 @@
 		    <groupId>org.aspectj</groupId>
 		    <artifactId>aspectjrt</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.aspectj</groupId>
+		    <artifactId>aspectjweaver</artifactId>
+		</dependency>
 	</dependencies>
 	
 	<build>
