--- a/common/audit/pom.xml
+++ b/common/audit/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 	  <groupId>org.sylrsykssoft</groupId>
 	  <artifactId>rest-java-musbands-common</artifactId>
-	  <version>0.1.0-SNAPSHOT</version>
+	  <version>${rest-java-musbands.version}</version>
 	</parent>
 
 	<artifactId>rest-java-musbands-audit</artifactId>
@@ -14,17 +14,21 @@
 	<description>Audit module for Java Musbands Repository</description> 
 	<url>https://github.com/sylarsykes/rest-java-musbands/blob/master/common/audit</url>
 	
+	<properties>
+		<yuequan.soft.delete.version>1.0.0.RELEASE</yuequan.soft.delete.version>
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.sylrsykssoft</groupId>
 			<artifactId>rest-java-musbands-core-starter</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>${rest-java-musbands.version}</version>
 		</dependency>
 		
 		<dependency>
 		  <groupId>org.yuequan</groupId>
 		  <artifactId>jpa-soft-delete-spring-boot-starter</artifactId>
-		  <version>1.0.0.RELEASE</version>
+		  <version>${yuequan.soft.delete.version}</version>
 		</dependency>
 	</dependencies>
 	
