--- a/common/pom.xml
+++ b/common/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 	  <groupId>org.sylrsykssoft</groupId>
 	  <artifactId>rest-java-musbands</artifactId>
-	  <version>0.1.0-SNAPSHOT</version>
+	  <version>${rest-java-musbands.version}</version>
 	</parent>
 	
 	<artifactId>rest-java-musbands-common</artifactId>
