--- a/common/security/pom.xml
+++ b/common/security/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 	  <groupId>org.sylrsykssoft</groupId>
 	  <artifactId>rest-java-musbands-common</artifactId>
-	  <version>0.1.0-SNAPSHOT</version>
+	  <version>${rest-java-musbands.version}</version>
 	</parent>
 	
 	<artifactId>rest-java-musbands-security</artifactId>
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>org.sylrsykssoft</groupId>
 			<artifactId>rest-java-musbands-core-starter</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>${rest-java-musbands.version}</version>
 		</dependency>
 	</dependencies>
 	
