--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.sylrsykssoft</groupId>
 	<artifactId>rest-java-musbands</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>${rest-java-musbands.version}</version>
 	<packaging>pom</packaging>
 
 	<name>rest-java-musbands</name>
@@ -14,7 +14,7 @@
 		<developer>
 		    <id>juan.gonzalez.fernandez.jgf</id>
 		    <name>Juan Gonzalez Fernandez</name>
-		    <email>juan.gonzalez.fernandez.jgf@outlook.com</email>
+		    <email>${developer.email}</email>
 		    <url>https://github.com/sylarsykes</url>
 		</developer>
 	</developers>
@@ -33,20 +33,22 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.2.RELEASE</version>
+		<version>2.1.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
+		<developer.email>juan.gonzalez.fernandez.jgf@outlook.com</developer.email>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<rest-java-musbands.version>0.1.0-SNAPSHOT</rest-java-musbands.version>
+		<rest-java-musbands.version>0.2.0-SNAPSHOT</rest-java-musbands.version>
 		<java.version>1.8</java.version>
-		<slf4j.version>1.7.25</slf4j.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<slf4j.version>1.7.26</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
-        <commons-lang.version>3.7</commons-lang.version>
-		<commons-collections4.version>4.1</commons-collections4.version>
-		<modelmapper-spring.version>2.3.0</modelmapper-spring.version>
+		<commons-collections4.version>4.3</commons-collections4.version>
+		<modelmapper-spring.version>2.3.3</modelmapper-spring.version>
 	</properties>
 
 	<dependencies>
