--- a/restapi/musical_genre/pom.xml
+++ b/restapi/musical_genre/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 	  <groupId>org.sylrsykssoft</groupId>
 	  <artifactId>rest-java-musbands-restapi</artifactId>
-	  <version>0.1.0-SNAPSHOT</version>
+	  <version>${rest-java-musbands.version}</version>
 	</parent>
 	
 	<artifactId>rest-java-musbands-musical-genre</artifactId>
@@ -18,17 +18,17 @@
 		<dependency>
 			<groupId>org.sylrsykssoft</groupId>
 			<artifactId>rest-java-musbands-core-starter</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>${rest-java-musbands.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.sylrsykssoft</groupId>
 			<artifactId>rest-java-musbands-audit</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>${rest-java-musbands.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.sylrsykssoft</groupId>
 			<artifactId>rest-java-musbands-configuration</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>${rest-java-musbands.version}</version>
 		</dependency>
 	</dependencies>
 </project>
