--- a/restapi/configuration/src/main/resources/application.properties
+++ b/restapi/configuration/src/main/resources/application.properties
@@ -1,13 +1,4 @@
-spring.application.name = Musbands Rest API
-
-#logging.level.org.h2.server: DEBUG
-server.port = 8082
-server.error.whitelabel.enabled = false 
-server.error.path = /error
-
-# ===============================
-# = LOGGER
-# ===============================
-log4j.logger.org.hibernate.SQL = DEBUG
-log4j.logger.org.hibernate.type = TRACE
-logging.level.org.hibernate.SQL = debug
+spring.datasource.driverClassName =
+spring.datasource.url =
+spring.datasource.username =
+spring.datasource.password =
